--- a/Clickbank-TedsWoodWorking/teds-woodworking.html
+++ b/Clickbank-TedsWoodWorking/teds-woodworking.html
@@ -4,9 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="teds-woodworking.css">
     <title>Document</title>
 </head>
 <body>
+    <header class="header" id="header">
+        <div class="divheaderimg" id="divheaderimg">
+            <img class="imgHeader" id="imgHeader" src="/Clickbank-TedsWoodWorking/imagens-tedwoodworking/ted-top-logo711.png" alt="Logo Ted's Ted's WoodWorkinG">
+        </div>
+        <div class="divheaderh2" id="divheaderh2">
+            <h2 class="h2header" id="h2header">YES! I’m Ready To Get Started Today!</h2>
+            <p>Give Me Instant Access To 16,000 Woodworking Plans & Bonuses Right Now!</p>
+        </div>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
     
 </body>
 </html>
