--- a/Clickbank-TedsWoodWorking/teds-woodworking.html
+++ b/Clickbank-TedsWoodWorking/teds-woodworking.html
@@ -18,6 +18,34 @@
         </div>
     </header>
     <main>
+        <div class="heresWhat" id="heresWhat">
+            <div class="heresWhatc1" id="heresWhatc1">
+                <div class="heresWhatc1_div1" id="heresWhatc1_div1">
+                    <h2 class="heresWhatc1_div1_h2" id="heresWhatc1_div1_h2">HERE'S WHAT YOU'LL GET:</h2>
+                </div>
+                <div class="heresWhatc1_div1" id="heresWhatc1_div2">
+                    <img class="heresWhatc1_div1_h2img" id="heresWhatc1_div1_img" src="imagens-tedwoodworking/1img3.png" alt="Buy Ted´s WoodWorkinG">
+                </div>
+                <div class="heresWhatc1_div1" id="heresWhatc1_div3">
+                    <p><img class="check" src="imagens-tedwoodworking/check.png" alt=""><strong>Instant access to all 16,000 plans with step-by-step details, schematics & cutting/materials list</strong></p>
+                    <p><img class="check" src="imagens-tedwoodworking/check.png" alt="">Lifetime Free Updates - No recurring fees or other charges</p>
+                    <p><img class="check" src="imagens-tedwoodworking/check.png" alt=""><strong>Get new plans to download every month for free</strong></p>
+                    <p><img class="check" src="imagens-tedwoodworking/check.png" alt="">Option to have everything on 2 DVDs</p>
+                    <p><img class="check" src="imagens-tedwoodworking/check.png" alt=""><strong>100% Risk-Free money back guarantee</strong></p>
+                    <div class="heresWhatc1_div" id="heresWhatc1_div1">
+                        <h2 class="heresWhatc1_div1_h2" id="heresWhatc1_div1_h2">Plus these amazing bonuses:</h2>
+                    </div>
+                    <p><img class="check" src="imagens-tedwoodworking/check.png" alt="">DWG & CAD Plan Viewer ($47 Value)</p>
+                    <p><img class="check" src="imagens-tedwoodworking/check.png" alt="">150 Premium Woodworking Videos ($77 Value)</p>
+                    <p><img class="check" src="imagens-tedwoodworking/check.png" alt="">How To Start A Woodworking Business ($27 Value)</p>
+                    <p><img class="check" src="imagens-tedwoodworking/check.png" alt="">Complete Woodworking Guides ($39 Value)</p>
+                </div>
+            </div>
+            <div class="heresWhatc2" id="heresWhatc2">
+                  
+            </div>
+        </div>
+        
 
     </main>
     <footer>
