finalizando call action

--- a/Clickbank-TedsWoodWorking/teds-woodworking.html
+++ b/Clickbank-TedsWoodWorking/teds-woodworking.html
@@ -69,12 +69,47 @@
                     </div>
                     <p><em>"If you are looking for best blueprints, illustrations and schematics to make any project hassle-free, I highly recommend TedsWoodworking!"</em></p>
                   </div>
-                  </div>
+            </div>
+        </div>
+
+        <div class="callaction" id="callaction">
+            <div class="heresWhatc1_div1" id="heresWhatc1_div1">
+                <h2 class="heresWhatc1_div1_h20" id="heresWhatc1_div1_h2"><del>RETAIL: $297</del></h2>
+                <h2 class="heresWhatc1_div1_h21" id="heresWhatc1_div1_h2">Time-Limited Launch Price: $67</h2>
+                
+            </div>
+            <div class="botao" id="botao">
+                <a class="linkbotao" id="linkbotao" href="https://ssl.clickbank.net/order/orderform.html?time=1700766168&vvvv=74656473706c616e73&vtid=desk&cbskin=20357&cbfid=13103&cbf=M6ST8AP23T&cbitems=8&vvar=cbitems%3D8%26cbfid%3D13103%26cbskin%3D20357%26vtid%3Ddesk&oaref=01.ABF10B4CF71125CEC8C4F4F6DD249D199D1C449364A51BAF76F56E564ECD7BCE50437E98&corid=583cee75-5684-46d6-92a3-4b5484750476" target="_parent">Click Here To Get Access Now</a>
+            </div>
+            <div>
+                <p><strong>Do note this is a time-limited launch offer.</strong></p>
+                <p><em>We reserve the right to end the promotional price anytime without warning</em></p>
+            </div>
+            <div class="linkurldiv">
+                <a class="linkurl1" id="linkurlid" href="https://ssl.clickbank.net/order/orderform.html?time=1700766168&vvvv=74656473706c616e73&vtid=desk&cbskin=20357&cbfid=13103&cbf=M6ST8AP23T&cbitems=8&vvar=cbitems%3D8%26cbfid%3D13103%26cbskin%3D20357%26vtid%3Ddesk&oaref=01.ABF10B4CF71125CEC8C4F4F6DD249D199D1C449364A51BAF76F56E564ECD7BCE50437E98&corid=583cee75-5684-46d6-92a3-4b5484750476" target="_parent"><p><strong>Get Instant Access to 16,000 Plans & Bonuses Now</strong></p></a>                
+            </div>
+        </div>
+
+        <div class="questions" id="questions">
+            <div class="questions-div" id="questions-div">
+                <h2>Got Questions?
+                </h2>
+            </div>
+            <div class="questions-all">
+                <div class="questions-column1">
+                            <details class="sumario">
+                                <summary>Alguns detalhes</summary>
+                                <p id="pduv">O cartão de visita virutal serve para você apresentar seu negócio ou produto para clientes, parceiros e prospects. Ele pode ser compartilhado pelo WhatsApp e outras plataformas de maneira ilimitada, ou seja, cada link está associado a um botão, dessa forma, com apenas um clique, seu cliente já acessa a sua rede social, site, WhatsApp, endereço e ainda tem a possibilidade de salvar o seu contato na agenda dele.</p>
+                            </details>
+                </div>
+                <div class="questions-column2">
+
+                </div>
+
             </div>
 
         </div>
         
-
     </main>
     <footer>
 
