parte das questions feitas

--- a/Clickbank-TedsWoodWorking/teds-woodworking.html
+++ b/Clickbank-TedsWoodWorking/teds-woodworking.html
@@ -97,17 +97,35 @@
             </div>
             <div class="questions-all">
                 <div class="questions-column1">
-                            <details class="sumario">
-                                <summary>Alguns detalhes</summary>
-                                <p id="pduv">O cartão de visita virutal serve para você apresentar seu negócio ou produto para clientes, parceiros e prospects. Ele pode ser compartilhado pelo WhatsApp e outras plataformas de maneira ilimitada, ou seja, cada link está associado a um botão, dessa forma, com apenas um clique, seu cliente já acessa a sua rede social, site, WhatsApp, endereço e ainda tem a possibilidade de salvar o seu contato na agenda dele.</p>
-                            </details>
+                    <div class="separaquetion">
+                        <details class="detalhes">
+                            <summary class="sumario">How do i get access to the plans? Is it something sent to my house?</summary>
+                            <p class="pduv">We’re in the digital age and one of the things I’m really excited about is how we deliver this program.<br><br>So the way it works is you’re going to enter your credit card information on the next page. After that, you’ll get instant access to the package. It’s kind of a membership site, but Nloki4321sucksdon’t worry about a monthly membership fee or anything like that.<br><br>You will pay only once and that’s all you pay. There’s no additional charges, no hidden charges, no nothing like that.<br><br>For a small fee I will also ship worldwide, the DVDs of all the plans and bonuses.</p>
+                        </details>
+                    </div>
+                    <div class="separaquetion">
+                        <details class="detalhes">
+                            <summary class="sumario">I don't have any space for a workshop.</summary>
+                            <p class="pduv">Fact is, you don't need a large space or expensive tools to build many of the projects. I started off with a 7x8 size workshop and many of my best pieces came from that shop.<br><br>I've included many small mobile workbenches you can build right away as well. Many of my plans do not require professional machinery or even a router.</p>
+                        </details>
+                    </div>
                 </div>
-                <div class="questions-column2">
 
+                <div class="questions-column1">
+                    <div class="separaquetion">
+                        <details class="detalhes">
+                            <summary class="sumario">Can I buy plans separately? I only need a few specific plans.</summary>
+                            <p class="pduv">Look. It doesn’t make sense to purchase one plan when I’m offering this deal for my entire package at only $67. I’ve sold my plans separately for a lot more but I’ve bundled everything together due to repeated requests.<br><br>Think about it this way: Even if you don’t intend to use most of the plans, this is a great deal any way you look at it. <br><br>For just one low price of $67, you can keep the rest of my plans forever. It will be handy in the future to have access to this huge collection of woodworking plans.</p>
+                        </details>
+                    </div>
+                    <div class="separaquetion">
+                        <details class="detalhes">
+                            <summary class="sumario">I can't afford tools or materials to build my project</summary>
+                            <p class="pduv"><em>If that’s the case… this is perfect for you…</em> because you will learn exactly what you need to build a project you’re interested in. So there’s no wasting your money on tools you won’t use. Just buy exactly what I tell you and follow my instructions. Then move onto the next and buy the new tools you need (if any)… Simple and cost effective!<br><br>Simply get what you need for the projects you want to build at anytime. I'll also show you ways to get lumber and materials for far less than what you pay retail.</p>
+                        </details>
+                    </div>
                 </div>
-
             </div>
-
         </div>
         
     </main>
