tentando acertar o max-width

--- a/Clickbank-TedsWoodWorking/teds-woodworking.html
+++ b/Clickbank-TedsWoodWorking/teds-woodworking.html
@@ -109,6 +109,24 @@
                             <p class="pduv">Fact is, you don't need a large space or expensive tools to build many of the projects. I started off with a 7x8 size workshop and many of my best pieces came from that shop.<br><br>I've included many small mobile workbenches you can build right away as well. Many of my plans do not require professional machinery or even a router.</p>
                         </details>
                     </div>
+                    <div class="separaquetion">
+                        <details class="detalhes">
+                            <summary class="sumario">Why a one-time fee? Won’t you lose money long term?</summary>
+                            <p class="pduv">Not really. It is a digital product after all. I suppose if <u>everyone</u> were to get this deal then yeah, eventually the time I spend every month creating the 5 new plans wouldn’t earn me an income. Which is why I am taking this page down soon!</p>
+                        </details>
+                    </div>
+                    <div class="separaquetion">
+                        <details class="detalhes">
+                            <summary class="sumario">Can I sell the projects I make with your plans?</summary>
+                            <p class="pduv">Absolutely. You can sell the projects you build with our plans. Many of my customers went on to make a sizable side income by selling projects they make.</p>
+                        </details>
+                    </div>
+                    <div class="separaquetion">
+                        <details class="detalhes">
+                            <summary class="sumario">What if I'm new to this and I'm just bad?</summary>
+                            <p class="pduv">I believe anyone can start woodworking.<br><br>I've got a whole bunch of easy starter plans you can try. It doesn't take a lot of tools or materials to build a lot of the starter projects.<br><br>If you can do small steps - cut a board in half, glue pieces.... then it is not that much of a leap to join the boards. Before you know it, you have a completed project. In the end, it is a simple process. It just a series of multiple steps.<br><br>My plans will guide you through everything. One step at a time.</p>
+                        </details>
+                    </div>
                 </div>
 
                 <div class="questions-column1">
@@ -124,9 +142,71 @@
                             <p class="pduv"><em>If that’s the case… this is perfect for you…</em> because you will learn exactly what you need to build a project you’re interested in. So there’s no wasting your money on tools you won’t use. Just buy exactly what I tell you and follow my instructions. Then move onto the next and buy the new tools you need (if any)… Simple and cost effective!<br><br>Simply get what you need for the projects you want to build at anytime. I'll also show you ways to get lumber and materials for far less than what you pay retail.</p>
                         </details>
                     </div>
+                    <div class="separaquetion">
+                        <details class="detalhes">
+                            <summary class="sumario">Are there a lot of beginner-friendly plans in this?</summary>
+                            <p class="pduv">YES. Most of these plans are beginner plans. With the rest being intermediate and some being expert plans.<br><br>But keep in mind, given the quality of these plans, you might surprise yourself with your ability to quickly expand the projects you can do.</p>
+                        </details>
+                    </div>
+                    <div class="separaquetion">
+                        <details class="detalhes">
+                            <summary class="sumario">I really want this, but I want to make sure it's safe. How does your guarantee work?</summary>
+                            <p class="pduv">Obviously, you should only give your credit card to companies that you can trust 100%. That’s why we use ClickBank. ClickBank is an established credit card processing company that has been in business since 1997.<br><br>They provide credit card clearing and payment services for tens of thousands of merchants all over the internet.<br><br> When you place your order with us, you will connect to ClickBank through a secure server, which makes it virtually impossible for a hacker to intercept your information.<br><br>And the 60 day money back guarantee is my personal promise to you. If you don’t like it for any reason, just drop me an email and I will refund you the full amount within 48 hours or less.<br><br>There will be no questions, no fineprint, no B.S</p></details>
+                    </div>
+                    <div class="separaquetion">
+                        <details class="detalhes">
+                            <summary class="sumario">Why are you discounting this so much?</summary>
+                            <p class="pduv">I want to reward my students who take fast action. When this goes live I will charge $39 per month and it WILL be worth it. But for some folks lucky enough to be here, the price is a ONE-TIME fee of $67.</p></details>
+                    </div>
+                    <div class="separaquetion">
+                        <details class="detalhes">
+                            <summary class="sumario">How long do I have access to the plans?</summary>
+                            <p class="pduv">You have LIFETIME access to all the plans in the members area. Your membership never expires and you can login anytime to download more plans. Whats more, I draft new plans every month so you'll always have new ideas, new projects to make</p></details>
+                    </div>
                 </div>
             </div>
         </div>
+
+        <div class="heresWhat5">
+            <div class="heresWhat5-1">
+                <h2 class="heresWhatc1_div1_h3" id="heresWhatc1_div1_h3">Start Your Next Project With Teds' Archive Of 16,000 Plans!</h2>
+                <p class="heresWhatc1_div1_h3p">Instant access to all <strong>16,000 woodworking plans</strong> with step-by-step details, photos, materials lists and more</p>
+                <br>
+                <p class="heresWhatc1_div1_h3p"><strong>Monthly free plans</strong> with lifetime membership access - No renewals, recurring fees or other charges</p>
+            </div>
+            <div class="heresWhat5-2">
+                <img class="heresWhatc1_div1_h2img" id="heresWhatc1_div1_img" src="imagens-tedwoodworking/1img3.png" alt="Buy Ted´s WoodWorkinG">
+            </div>
+        </div>
+
+        <div class="callaction" id="callaction">
+            <div class="heresWhatc1_div1" id="heresWhatc1_div1">
+                <h2 class="heresWhatc1_div1_h20" id="heresWhatc1_div1_h2"><del>RETAIL: $297</del></h2>
+                <h2 class="heresWhatc1_div1_h21" id="heresWhatc1_div1_h2">Time-Limited Launch Price: $67</h2>
+                
+            </div>
+            <div class="botao" id="botao">
+                <a class="linkbotao" id="linkbotao" href="https://ssl.clickbank.net/order/orderform.html?time=1700766168&vvvv=74656473706c616e73&vtid=desk&cbskin=20357&cbfid=13103&cbf=M6ST8AP23T&cbitems=8&vvar=cbitems%3D8%26cbfid%3D13103%26cbskin%3D20357%26vtid%3Ddesk&oaref=01.ABF10B4CF71125CEC8C4F4F6DD249D199D1C449364A51BAF76F56E564ECD7BCE50437E98&corid=583cee75-5684-46d6-92a3-4b5484750476" target="_parent">Click Here To Get Access Now</a>
+            </div>
+            <div>
+                <p><strong>Do note this is a time-limited launch offer.</strong></p>
+                <p><em>We reserve the right to end the promotional price anytime without warning</em></p>
+            </div>
+            <div class="linkurldiv">
+                <a class="linkurl1" id="linkurlid" href="https://ssl.clickbank.net/order/orderform.html?time=1700766168&vvvv=74656473706c616e73&vtid=desk&cbskin=20357&cbfid=13103&cbf=M6ST8AP23T&cbitems=8&vvar=cbitems%3D8%26cbfid%3D13103%26cbskin%3D20357%26vtid%3Ddesk&oaref=01.ABF10B4CF71125CEC8C4F4F6DD249D199D1C449364A51BAF76F56E564ECD7BCE50437E98&corid=583cee75-5684-46d6-92a3-4b5484750476" target="_parent"><p><strong>Get Instant Access to 16,000 Plans & Bonuses Now</strong></p></a>                
+            </div>
+        </div>
+
+        <footer>
+            <div class="footer">
+                <p>Copyright © TedsWoodworking All Right Reserved<br>2802 Flintrock Trace, Austin, TX, 78738, US</p>
+                <br>
+                <p><a href="https://www.tedswoodworking.com/new/privacy/" target="_blank">Privacy Policy</a>&emsp; &emsp;<a href="https://www.tedswoodworking.com/new/terms/" target="_blank">Terms of Use</a></p>
+                <br>
+                <p class="footerp">ClickBank is the retailer of products on this site. CLICKBANK® is a registered trademark of Click Sales, Inc., a Delaware corporationlocated at 917 S. Lusk Street, Suite 200, Boise Idaho, 83706, USA and used by permission. ClickBank's role as retailer does not constitute an endorsement, approval or review of these products or any claim, statement or opinion used in promotion of these products.</p>
+
+            </div>
+        </footer>
         
     </main>
     <footer>
