--- a/Clickbank-TedsWoodWorking/teds-woodworking.html
+++ b/Clickbank-TedsWoodWorking/teds-woodworking.html
@@ -10,7 +10,7 @@
 <body class="main1">
     <header class="header" id="header">
         <div class="divheaderimg" id="divheaderimg">
-            <img class="imgHeader" id="imgHeader" src="/Clickbank-TedsWoodWorking/imagens-tedwoodworking/ted-top-logo711.png" alt="Logo Ted's Ted's WoodWorkinG">
+            <img class="imgHeader" id="imgHeader" src="/Clickbank-TedsWoodWorking/imagens-tedwoodworking/ted-top-logo711.png" alt="Logo Ted's WoodWorkinG">
         </div>
         <div class="divheaderh2" id="divheaderh2">
             <h2 class="h2header" id="h2header">YES! I’m Ready To Get Started Today!</h2>
